--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Group 2 Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>first commit</h1>
+   <header class="navbar">
+    <h2>Positivus</h2>
+    <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">UseCase</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><button><a href="">Reuest a Quote</a></button></li>
+    </ul>
+   </header>
+
+   <!-- hero section -->
+    <section class="hero">
+        <div class="hero-text">
+            <h1>Navigating the digital landscape for success</h1>
+            <p>We are a team of talented designers making websites with 
+                Bootstrap for you. Check out our portfolio to see our work and experience. 
+            give us a call to learn more about our services</p>
+            <button class="hero-button">Get Started</button>
+        </div>
+        <div class="hero-image">
+            <img src="hero.webp" alt="">
+        </div>
+    </section>
 </body>
 </html>
